# cash-machine

./: CMakeLists.txt  readme.md
src/: Stack.h  cashmachine.cpp  cashmachine.h
test/: CMakeLists.txt  test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  testutils.cpp
